Add RPDB support, option to disable redis

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,11 +6,15 @@ ENCRYPTION_KEY=
 ENCRYPTION_SALT=
 
 TMDB_API_KEY=
+RPDB_API_KEY=
 
 REDIS_USERNAME=
 REDIS_PASSWORD=
 REDIS_PORT=
 REDIS_HOST=
 
-BACKEND_HOST=stremio-simkl.server.nktfh100.com
+BACKEND_HOST=localhost:43001
 FRONTEND_URL=http://localhost:5173
+
+USE_RPDB=y
+DISABLE_REDIS=
