Add completed media, pagination, dev docker compose

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,10 +8,10 @@ ENCRYPTION_SALT=
 TMDB_API_KEY=
 RPDB_API_KEY=
 
-REDIS_USERNAME=
-REDIS_PASSWORD=
-REDIS_PORT=
-REDIS_HOST=
+REDIS_USERNAME=default
+REDIS_PASSWORD=redis_password
+REDIS_PORT=6379
+REDIS_HOST=localhost
 
 BACKEND_HOST=localhost:43001
 FRONTEND_URL=http://localhost:5173
