--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,14 +1,17 @@
-FROM node:18-alpine AS base
+FROM node:20-alpine AS base
 
 # Install dependencies only when needed
 FROM base AS deps
 # Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
 RUN apk add --no-cache libc6-compat
-WORKDIR /app
+WORKDIR /app/backend
 
 COPY ./backend/package.json ./
+COPY ./shared /app/shared
 
 RUN npm install --omit=dev
+
+RUN ls /app
 
 COPY ./backend ./
 
