--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "^4.21.2",
+		"prom-client": "^15.1.3",
 		"redis": "^4.6.12",
 		"shared": "file:../shared",
 		"ts-node": "^10.9.2",
