--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
 		"start": "ts-node --transpile-only src/index.ts"
 	},
 	"dependencies": {
+		"@sentry/node": "^8.54.0",
 		"axios": "^1.7.4",
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
