Refractor: move all env vars to config

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,7 +16,7 @@ REDIS_HOST=localhost
 BACKEND_HOST=localhost:43001
 FRONTEND_URL=http://localhost:5173
 
-USE_RPDB=y
+USE_RPDB=true
 DISABLE_REDIS=
 
 ENABLE_METRICS=
