Update dependabot schedule to monthly

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,8 +8,8 @@ updates:
   - package-ecosystem: "npm" 
     directory: "/backend" 
     schedule:
-      interval: "weekly"
+      interval: "monthly"
   - package-ecosystem: "npm"
     directory: "/frontend" 
     schedule:
-      interval: "weekly"
+      interval: "monthly"
