--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,13 @@
 {
 	"name": "stremio-simkl-backend",
 	"version": "0.0.0",
+	"type": "module",
 	"scripts": {
 		"dev": "npx nodemon ./src/index.ts",
-		"start": "ts-node --transpile-only src/index.ts"
+		"build": "tsc && tsc-alias",
+		"start": "tsx dist/index.js",
+		"lint": "eslint src --ext .ts --report-unused-disable-directives --max-warnings 0",
+		"format": "prettier --write \"src/**/*.{ts,js,json}\""
 	},
 	"dependencies": {
 		"@sentry/node": "^8.54.0",
@@ -15,14 +19,20 @@
 		"redis": "^4.7.0",
 		"shared": "file:../shared",
 		"ts-node": "^10.9.2",
-		"tsconfig-paths": "^4.2.0"
+		"tsconfig-paths": "^4.2.0",
+		"tsx": "^4.19.3"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.22.0",
 		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
 		"@types/node": "^22.13.5",
 		"@types/stremio-addon-sdk": "^1.6.10",
+		"eslint-config-prettier": "^10.1.1",
 		"nodemon": "^3.1.9",
-		"typescript": "^5.8.2"
+		"prettier": "^3.5.3",
+		"tsc-alias": "^1.8.11",
+		"typescript": "^5.8.2",
+		"typescript-eslint": "^8.27.0"
 	}
 }
