--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,9 +9,9 @@
         // "disableSolutionSearching": true,                 /* Opt a project out of multi-project reference checking when editing. */
         // "disableReferencedProjectLoad": true,             /* Reduce the number of projects loaded automatically by TypeScript. */
         /* Language and Environment */
-        "target": "es2022", /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
+        "target": "ESNext", /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
         "lib": [
-            "es2023"
+            "ESNext"
         ], /* Specify a set of bundled library declaration files that describe the target runtime environment. */
         // "jsx": "preserve",                                /* Specify what JSX code is generated. */
         // "experimentalDecorators": true,                   /* Enable experimental support for legacy experimental decorators. */
@@ -24,9 +24,9 @@
         // "useDefineForClassFields": true,                  /* Emit ECMAScript-standard-compliant class fields. */
         // "moduleDetection": "auto",                        /* Control what method is used to detect module-format JS files. */
         /* Modules */
-        "module": "node16", /* Specify what module code is generated. */
+        "module": "ESNext", /* Specify what module code is generated. */
         // "rootDir": "./",                                  /* Specify the root folder within your source files. */
-        "moduleResolution": "node16", /* Specify how TypeScript looks up a file from a given module specifier. */
+        "moduleResolution": "Node", /* Specify how TypeScript looks up a file from a given module specifier. */
         // "baseUrl": "./", /* Specify the base directory to resolve non-relative module names. */
         "paths": { /* Specify a set of entries that re-map imports to additional lookup locations. */
             "@/*": [
@@ -108,5 +108,9 @@
         "require": [
             "tsconfig-paths/register"
         ]
-    }
+    },
+    "exclude": [
+        "node_modules",
+        "dist"
+    ]
 }
