--- a/backend/package.json
+++ b/backend/package.json
@@ -1,38 +1,36 @@
 {
-	"name": "stremio-simkl-backend",
-	"version": "0.0.0",
-	"type": "module",
-	"scripts": {
-		"dev": "npx nodemon ./src/index.ts",
-		"build": "tsc && tsc-alias",
-		"start": "tsx dist/index.js",
-		"lint": "eslint src --ext .ts --report-unused-disable-directives --max-warnings 0",
-		"format": "prettier --write \"src/**/*.{ts,js,json}\""
-	},
-	"dependencies": {
-		"@sentry/node": "^8.54.0",
-		"axios": "^1.8.1",
-		"cors": "^2.8.5",
-		"dotenv": "^16.4.7",
-		"express": "^4.21.2",
-		"prom-client": "^15.1.3",
-		"redis": "^4.7.0",
-		"shared": "file:../shared",
-		"ts-node": "^10.9.2",
-		"tsconfig-paths": "^4.2.0",
-		"tsx": "^4.19.3"
-	},
-	"devDependencies": {
-		"@eslint/js": "^9.22.0",
-		"@types/cors": "^2.8.17",
-		"@types/express": "^4.17.21",
-		"@types/node": "^22.13.5",
-		"@types/stremio-addon-sdk": "^1.6.10",
-		"eslint-config-prettier": "^10.1.1",
-		"nodemon": "^3.1.9",
-		"prettier": "^3.5.3",
-		"tsc-alias": "^1.8.11",
-		"typescript": "^5.8.2",
-		"typescript-eslint": "^8.27.0"
-	}
+  "name": "stremio-simkl-backend",
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "tsx watch ./src/index.ts",
+    "build": "tsc && tsc-alias",
+    "start": "tsx dist/index.js",
+    "lint": "eslint src --ext .ts --report-unused-disable-directives --max-warnings 0",
+    "format": "prettier --write \"src/**/*.{ts,js,json}\""
+  },
+  "dependencies": {
+    "@sentry/node": "^8.54.0",
+    "axios": "^1.8.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "prom-client": "^15.1.3",
+    "redis": "^4.7.0",
+    "shared": "file:../shared",
+    "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.19.3"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.22.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.13.5",
+    "@types/stremio-addon-sdk": "^1.6.10",
+    "eslint-config-prettier": "^10.1.1",
+    "prettier": "^3.5.3",
+    "tsc-alias": "^1.8.11",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.27.0"
+  }
 }
