--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint src --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,json}\""
   },
   "dependencies": {
-    "@eslint-community/eslint-utils": "^4.5.1",
     "@fontsource/roboto": "^5.0.8",
     "@uiball/loaders": "^1.3.1",
     "rdndmb-html5-to-touch": "^9.0.0",
@@ -25,17 +24,18 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.22.0",
     "@types/node": "^22.13.10",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^8.27.0",
-    "@typescript-eslint/parser": "^8.27.0",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.0.0",
+    "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
     "prettier": "^3.5.3",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^8.27.0",
     "vite": "^6.2.0"
   }
 }
