--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -31,6 +31,9 @@
         "paths": { /* Specify a set of entries that re-map imports to additional lookup locations. */
             "@/*": [
                 "./src/*"
+            ],
+            "@shared/*": [
+                "../shared/*"
             ]
         },
         // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
